2006-04-25  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeWin32Classic.cs: Button image alignment now matches exactly
	  ms

2006-04-25  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeWin32Classic.cs: Fixed drawing code for buttons with an
	  image. The image position is always the same, no matter if the
	  button is pressed or not.

2006-04-25  Alexander Olk  <alex.olk@googlemail.com>

	* FileDialog.cs: SaveFileDialog shouldn't rely on a MWFFileView
	  selection and set the correct filename for SaveFileDialog.
	  Patch by Emery Conrad.

2006-04-24  Mike Kestner  <mkestner@novell.com>

	* ListView.cs (LastVisibleIndex): when in List mode of Alignment.Left,
	check for item.X outside the ClientRect instead of item.Y. Fixes
	#78151.

2006-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ImageListStreamer.cs: some images store a wrong grow factor, so don't
	trust that value blindly and do some sanity check. Fixes bug #77814.

2006-04-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ImageListStreamer.cs: save the mask as a 1bpp image.

2006-04-21  Mike Kestner  <mkestner@novell.com>

	* CheckedListBox.cs: maintain CheckStatus here. Use DrawItemState to
	pass Checked and Indeterminate to the Theme Engine. Improve
	encapsulation with ListBox.
	* ListBox.cs: Keep a StringFormat instead of calculating it every item
	draw. Kill ListBoxItem. Refactor away the ListBoxInfo and ListBoxItem
	nested types.  Move all CheckState functionality to CheckedListBox.
	Make IntegralHeight work like MS.  Rewrite of Layout engine.  Fix
	OwnerDrawVariable layout/rendering.  Fix multicolumn rendering.  Fix
	ScrollAlwaysVisible handling. Refactor "selected" collections to use a
	single base list. Fix scrollbar sizing and placement to mirror MS.
	* Theme.cs: remove CheckedListBoxCheckRectangle. It wasn't really
	used.
	* ThemeWin32Classic.cs: implement Indeterminate CheckState rendering
	for CheckedListBox by using new DrawItemState info.  Center the